Replave header position to sticky to fix content overlapping problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ h3 {
 }
 
 /* Header */
+header {
+    position: sticky;
+    top: 0;
+    background-color: #1f1f24;
+}
+
 /* Navbar */
 .header-navbar {
     display: flex;
@@ -82,10 +88,6 @@ h3 {
 
 /* Main Content */
 /* Hero section */
-.main {
-    flex: 1 0 auto;
-}
-
 .hero {
     background-image: url(../images/hero-image.webp);
     background-position: center;
